<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chassip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="left_drawer_title">Chats</string>
    <string name="right_drawer_title">Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_convos">Convos</string>
    <string name="error_no_connection">No data connection</string>
    <string name="error_no_message">error no message</string>
    <string name="is_typing_holder"> </string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Re-enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go To Login</string>
    <string name="go_to_register">Go To Registration</string>
    <string name="select_avi">Select Your Avatar</string>
    <string name="select_avi_group">Select Avatar For Group</string>
    <string name="create">Create</string>
    <string name="gallery">Load Existing Image</string>
    <string name="camera">Camera Capture</string>
    <string name="select_image_title">Image Selector</string>
    <string name="select_image_message">Choose the method to select your image.</string>
    <string name="choose_type">Choose convo type:</string>
    <string name="choose_name">Choose name:</string>
    <string name="choose_members">Choose members:</string>
    <string name="sideconvo">Side-Convo</string>
    <string name="whisper">Whisper</string>
    <string name="send">Send</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="join_whisper_title">Whipser Invite</string>
    <string name="join_whisper_message">You\'ve been invited to a whisper by %s. Would you like to join?</string>
    <string name="join_sideconvo_title">Side-Convo Invite</string>
    <string name="join_sideconvo_message">You\'ve been invited to a side-convo by %s. Would you like to join?</string>
    <string name="join_chat_title">Chat Invite</string>
    <string name="join_chat_message">You\'ve been invited to a chat by %s. Would you like to join?</string>
    <string name="create_chat">New Chat</string>
    <string name="create_chat_title">Create New Chat</string>
    <string name="create_chat_hint">Enter chat name</string>
    <string name="add_members_to_chat">Add Chat Members</string>
    <string name="add_members_to_chat_title">Add Chat Members</string>
    <string name="add_members_to_convo">Add Convo Members</string>
    <string name="add_members_to_convo_title">Add Convo Members</string>
    <string name="remove_members_from_chat_title">Remove Members</string>
    <string name="remove_members_from_convo_title">Remove Members</string>
    <string name="pending_message_hint">Say something dope…</string>
    <string name="create_convo">Create a New Convo</string>
    <string name="create_convo_title">New Convo</string>
    <string name="settings_title">Settings</string>
    <string name="settings_interleaving_label">Interleaving messages</string>
    <string name="settings_use_kachis_cache_label">Use Kachi\'s cache implementation</string>
    <string name="settings_show_debug_toasts_label">Show debug toast messages</string>
    <string name="settings_circlize_member_avis">Circlize group member avis</string>
    <string name="settings_show_log">Show Log</string>
    <string name="settings_clear_log">Clear Log</string>
    <string name="save">Save</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="logout_title">Logging Out</string>
    <string name="delete_chat">Are you sure you want to delete this chat?</string>
    <string name="delete_chat_title">Deleting %s</string>
    <string name="delete_side_convo">Are you sure you want to delete this side-convo?</string>
    <string name="delete_side_convo_title">Deleting %s</string>
    <string name="delete_whisper">Are you sure you want to delete this whisper?</string>
    <string name="delete_whisper_title">Deleting %s</string>
    <string name="app_id">1516871478529316</string>
</resources>