<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/list_padding"
    android:paddingRight="@dimen/list_padding"
    android:paddingTop="@dimen/list_padding"
    android:paddingBottom="@dimen/list_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_type"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sideconvo"
        android:id="@+id/sideConvo"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whisper"
        android:id="@+id/whisper"/>

    <TextView
        android:paddingTop="@dimen/list_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_name"/>

    <EditText
        android:id="@+id/convoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapWords|textMultiLine"
        android:hint="@string/create_chat_hint"/>

    <TextView
        android:paddingTop="@dimen/list_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_members"
        android:id="@+id/textView"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/users"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>