<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/list_padding"
    android:paddingRight="@dimen/list_padding"
    android:paddingTop="@dimen/list_padding"
    android:paddingBottom="@dimen/list_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_name"/>

    <EditText
        android:id="@+id/chatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapWords|textMultiLine"
        android:hint="@string/create_chat_hint"/>

    <TextView
        android:paddingTop="@dimen/list_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_members"/>

    <ListView
        android:id="@+id/createChatUsersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small_list_padding"
        android:layout_gravity="center_horizontal"
        android:dividerHeight="10dp"
        android:divider="@android:color/transparent"/>

</LinearLayout>